# FortZero

./: .env.example  .gitignore  README.md  pyproject.toml
config/: base.yaml
content/campaigns/rootborne/: campaign.yaml
scripts/: run.sh  setup.sh
src/fortzero/: __init__.py  __main__.py
src/fortzero/cli/: __init__.py  main.py
src/fortzero/content/: __init__.py  campaign_loader.py  mission_loader.py  models.py  validator.py
src/fortzero/core/: __init__.py  bootstrap.py  config.py  logging.py  paths.py
src/fortzero/data/: __init__.py  db.py  event_repository.py  ghostwatch_repository.py  mission_run_repository.py  profile_repository.py  runtime_repository.py  schema.sql  session_repository.py
src/fortzero/events/: __init__.py  bus.py  event_log.py  models.py
src/fortzero/ghostwatch/: __init__.py  detectors.py  engine.py  models.py  responders.py  state_machine.py
src/fortzero/mission/: __init__.py  models.py  objective_engine.py  orchestrator.py  prerequisite_engine.py
src/fortzero/narrative/: __init__.py  briefing_renderer.py  narrative_engine.py  text_fx.py
src/fortzero/profile/: __init__.py  models.py  service.py  store.py
src/fortzero/runtime/: __init__.py  environment_factory.py  models.py  runtime_actions.py  runtime_engine.py  scan_engine.py  scan_models.py
src/fortzero/session/: __init__.py  models.py  service.py
src/fortzero/shell/: __init__.py  app.py  banner.py
src/fortzero/state/: __init__.py  state_manager.py
src/fortzero/world/: __init__.py  models.py  world_mutations.py  world_repository.py  world_service.py
(+12 files in other folders)
